src/main/java/com/example/fas/exceptions/user/invalid/UserIDInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class UserIDInvalidException extends RuntimeException {
    public UserIDInvalidException(String message) {
        super(message);
    }
    
}
